tests/derive_ui/arg_enum_non_unit.rs
use clap::ArgEnum;

#[derive(ArgEnum, Clone, Debug)]
enum Opt {
    Foo(usize),
}

fn main() {
    println!("{:?}", Opt::Foo(42));
}
